2008-01-03  Alexander Larsson  <alexl@redhat.com>

	* gunixmounts.c (g_unix_is_mount_path_system_internal):
	Add /usr/local to list of internal mountpoints

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * glocalfileinfo.c:
	Check for HAVE_LCHOWN (#505887)
	
2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * gfileinfo.h:
        * glocalfileinfo.c:
	Add define for selinux context attribute.
	Fix missing : -> :: namespace separator change
	Fix missing _ -> - name change for xattr-sys.
	(#505058)

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * fam/Makefile.am:
	Link to libglib and libgobject directly (#504879)
	Patch from Sebastien Bacher

2008-01-01  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gfile.c: Expanded the g_file_new_for_commandline_arg
	description a bit, based on the code and the docs of the
	other g_file_new_for_* functions.

2007-12-31  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gfilemonitor.h: Fixed typo in docs.

2007-12-31  Mathias Hasselmann  <mathias@openismus.com>

	Updates to GIO documentation. (#506395, Mikael Hermansson)

	* gcontenttype.c: Describe memory management for return value of
	g_content_types_get_registered(). Missing piece from #505815.
	* gdrive.c, gmount.c, gvolumemonitor.c: Add more description to
	GVolume, GDrive, GMounts, which hopefully gives the user less
	confusions when using this API. Following explainations from
	Alexander Larsson on gtk-devel-list.

2007-12-30  Matthias Clasen  <mclasen@redhat.com> 

	* gfileinfo.c: Expand the long description.

2007-12-30  Matthias Clasen  <mclasen@redhat.com> 

	* fam/Makefile.am:
	* inotify/Makefile.am: Use GLIB_DEBUG_FLAGS. This should
	fix builds with --disable-visibility.  (#500273, Christian Persch)

2007-12-30  Matthias Clasen  <mclasen@redhat.com> 

	* gdesktopfileinfo.c (g_app_info_get_all): Don't include NULLs
	in the list of returned app infos.

2007-12-30  Matthias Clasen  <mclasen@redhat.com> 
